# coding

./: CMakeLists.txt  main.cpp
coding/: CMakeLists.txt
coding/code/: CMakeLists.txt  code_info.cpp  code_info.hpp  msg_info.cpp  msg_info.hpp  test_matrix.cpp  test_matrix.hpp
coding/common/: CMakeLists.txt  vec.cpp  vec.hpp
coding/hamming/: CMakeLists.txt  hamming.cpp  hamming.hpp
coding/utils/: CMakeLists.txt  utils.cpp  utils.hpp
